# holefetch

./: .gitignore  .~lock.holefetch_project_plan_v2.docx#  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  colour.rs  config.rs  desktop.rs  info.rs  main.rs
