[package]
name = "holefetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
image = "0.25"
color-thief = "0.2"
colored = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"